# waybar-taskwarrior-hook

./: Makefile  README.md  sample-waybar-config.jsonc  start-waybar.sh
.github/workflows/: rust.yml
on-exit-hook-waybar/: Cargo.toml
on-exit-hook-waybar/src/: errors.rs  main.rs  signals.rs  task.rs  utils.rs
