[package]
name = "on-exit-hook-waybar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dirs = "5.0.1"
libc = "0.2.164"
log = "0.4.22"
nix = { version = "0.29.0", features = ["signal"] }
procfs = "0.17.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simplelog = "0.12.2"
